Rewrote Sections "Vector offset", "Linear projection". Minor fixes in other parts.

--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -225,7 +225,7 @@ Node $1$ is the root of the taxonomy.
 All gray-colored nodes are connected to $root_T$ and therefore part of the \textbf{root taxonomy}.
 It can be seen that the white-colored classes $7$ and $8$ are not connected to $root_T = 1$, therefore they do not belong to the root taxonomy.
 Class $7$ is an \textbf{orphan class}, since it is not the root class and has no outgoing edges.
-\label{fig:ontology spectrum}
+\label{fig:taxonomy dag}
 \end{mdframed}
 \end{figure}
 
