--- a/thesis/ontology_learning.ltx
+++ b/thesis/ontology_learning.ltx
@@ -77,7 +77,7 @@ The algorithm developed by this thesis uses a classification-based approach, sin
 Instead of exploiting the hierarchic structure of the taxonomy, a variant of k-nearest-neighbors is used to address the "high number of labels" problem 
 (mentioned in Section~\ref{section:problem statement}).
 
-\subsubsection{Neural networks in ontology learning}
+\subsubsection{Neural networks in ontology learning}\label{section:ol nn}
 \fullcite{Fu2014} develop a method to construct a semantic hierarchy (taxonomy) given a hyponym (subclass) and a list of corresponding hypernyms (superclasses),
 as shown in Figure~\ref{fig:concept hierarchy}. In this example, the input is the subclass \textit{computer (Q68)} and its superclasses \textit{tool (Q39546)} etc.
 \fullcite{Fu2014}'s solution uses neural word embeddings, as discussed in Section~\ref{section:word2vec}, to construct a more specific and precise concept hierarchy.
