--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -58,3 +58,5 @@
 \newtheorem*{definition*}{Definition}
 \newtheorem{algorithm}{Algorithm}
 
+% argmin (https://tex.stackexchange.com/a/5255)
+\DeclareMathOperator*{\argmin}{arg\,min}
