--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -107,56 +107,101 @@ The kNN implementation provided by the scikit-learn library \cite{scikit-learn} 
 \subsubsection{Vector offset}\label{section:vector offset}
 
 \begin{figure}[H]
+\begin{mdframed}
 \centering
 \includegraphics[width=\textwidth]{images/algorithm/2d_subclass_offsets.png}
-\caption{Subclass-of offsets of $800000$ randomly chosen subclass-superclass pairs}
+\caption{Subclass offsets of $240789$ subclass-superclass pairs.}
+\medskip
+The subclass-superclass pairs were retrieved from the set of relevant classes (Section~\ref{section:relevant classes}).
+For each pair the offset $\vec{\textit{superclass}} - \vec{\textit{subclass}} \in \mathbb{R}^{300}$ was computed 
+using the triple sentence word embeddings (Section~\ref{section:triple sentences}).
+The offsets were clustered into $5$ clusters using KMeans clustering.
+PCA was applied on the clustered offsets for plotting.
+Each color indicates a cluster, the corresponding cluster number is placed on each cluster center.
 \label{fig:2d offsets}
+\end{mdframed}
 \end{figure}
 
 A possible approach for classification is to exploit the linear regularities encoded in the word embeddings.
 As shown in Section~\ref{section:word2vec}, it is possible to answer semantic questions by applying algebraic operations on word embeddings \cite{Mikolov2013}.
-Given a subclass-superclass pair with word embeddings $\vec{c}, \vec{p}$ and the word embedding $\vec{o}$ of an orphan class,
-the superclass with word embedding $\vec{r}$ of $\vec{o}$ could be calculated, as follows 
+Given a subclass-superclass pair with word embeddings $\vec{x}, \vec{y} \in \mathbb{R}^d$ and the word embedding $\vec{u} \in \mathbb{R}^d$ of an unknown class,
+the superclass with word embedding $\vec{p} \in \mathbb{R}^d$ of $\vec{u}$ could be calculated, as follows 
 \begin{align*}
-\vec{r} = \vec{p} - \vec{c} + \vec{o}
+\vec{p} = \vec{y} - \vec{x} + \vec{u}
 \end{align*}
-The subclass-of relationship is represented by the offset $\vec{p} - \vec{c}$. 
-The classification task could be simplified to the task of adding such an offset to a given word embedding.
+where $d \in \mathbb{N}$ is the embedding size.
+The subclass-of relationship is represented by the offset $\vec{y} - \vec{x}$. 
+Using the subclass offsets would simplify the difficult task of classifying an unknown class in a big taxonomy
+to a vector addition, which represents a translation.
 This is however only possible, if the subclass-of offset is similar for all existing subclass-superclass pairs \cite{Fu2014}.
 
-For the use case of Wikidata, it can be shown that the offsets do not fulfill this criteria. It can rather be seen that different clusters of
-similar subclass-of offsets exist. 
-Using the word embeddings created by SGNS trained on triple sentences.
-the subclass-of offsets for $800000$ randomly chosen subclass-superclass pairs were computed.
+For the use case of Wikidata, it can be shown that the offsets do not fulfill this criteria. 
+It can rather be seen that different clusters of similar subclass-of offsets exist. 
+Using the word embeddings created by SGNS trained on triple sentences,
+the subclass-of offsets for $240789$ subclass-superclass pairs were computed.
 Using Principal Component Analysis (PCA), the 300-dimensional vectors were reduced to  2-dimensional vectors,
 which are shown in Figure~\ref{fig:2d offsets}.
+
+% TODO: look at clusters
 
 It can be seen, that clusters of offsets exist, which have completely different orientations in respect to the origin $(0,0)$.
 Therefore directly using vector offsets would not be applicable, as offsets can not represent the complex subclass-of relation.
 \fullcite{Fu2014} reached a similar conclusion and proposes the use of linear projections as means to represent the subclass-of relation.
-In the following section, the approach by \citeauthor{Fu2014} is described and implemented as a variation of the classification component.
+In the following section, the approach by \citeauthor{Fu2014}, which is described in Section~\ref{section:ol nn},
+is adjusted for usage in the hybrid algorithm.
 
 \subsubsection{Linear projection}
-It is assumed that a class $\vec{x}$ can be projected to its superclass $\vec{y}$ using a matrix $\Phi$, so that $\vec{y} = \Phi \vec{x}$ applies.
-\fullcite{Fu2014} propose two variants of linear projection for classification. A uniform linear projection, which trains a single matrix $\Phi$ on all subclass-superclass pairs,
-and a piecewise linear projection, which trains $k$ matrices $\Phi_k$ for $k$ clusters of subclass-superclass offsets.
-
-Uniform linear projection tries to minimize the mean squared error of the projected $\Phi \vec{x}$ and the actual result $\vec{y}$, as follows
+Following the idea of using vector offsets to find the correct superclass $\vec{p} \in \mathbb{R}^d$ 
+for a given unknown $\vec{u} \in \mathbb{R}^d$,
+the translation represented by the subclass offset can be extended by adding a linear projection matrix $\Phi \in \mathbb{R}^{d \times d}$.
+This follows the idea of \fullcite{Fu2014}, who uses linear projection without translation
+to find the superclasses for a given unknown.
+The superclass $\vec{p}$ for an unknown $\vec{u}$ is accordingly computed:
 \begin{align}
-&\Phi^* = \min_\Phi \frac{1}{N} \sum_{(\vec{x}, \vec{y})} \norm{\Phi \vec{x} - \vec{y}}^2 
+&\vec{p} = \Phi \vec{u} + \vec{v} = \begin{bmatrix}\Phi & \vec{v}\end{bmatrix} \begin{bmatrix}\vec{u} \\ 1\end{bmatrix}
+\end{align}
+where $\vec{v} \in \mathbb{R}^d$ is a translation vector.
+Combining the translation and projection into a single matrix $T = \begin{bmatrix}\Phi & \vec{v}\end{bmatrix}$
+enables the use of \fullcite{Fu2014}'s approach for finding $T^* \in \mathbb{R}^{d \times d}$,
+which is the best fit for the given subclass-superclass pairs.
+$T^*$ can be computed by minimizing the following mean squared error \cite{Fu2014}:
+\begin{align}
+&T^* = \argmin_T \frac{1}{N} \sum_{(\vec{x}, \vec{y})} \norm{T \vec{x} - \vec{y}}^2 
 \end{align}
 where $N$ is the number of $(\vec{x}, \vec{y})$ subclass-superclass pairs in the training data \cite{Fu2014}.
 
-Piecewise linear projection learns a projection matrix $\Phi_k$ for each identified cluster in the data set.
-For this to work, training data needs to be selected in such a way that each cluster is represented in the training data.
-Otherwise the training objective is the same to the uniform linear projection:
-\begin{align}
-&\Phi^* = \min_{\Phi_k} \frac{1}{N_k} \sum_{(\vec{x}, \vec{y})\in C_k} \norm{\Phi_k \vec{x} - \vec{y}}^2 
-\end{align}
-where $N_k$ is the amount of word pairs in the $k^\mathit{th}$ cluster $C_k$ \cite{Fu2014}.
+\fullcite{Fu2014} proposes an improvement to the linear projection.
+As shown in Figure~\ref{fig:2d offsets}, the subclass offsets appear in clusters,
+therefore it is intuitive to assume that training a matrix $T_k \in \mathbb{R}^{d \times d}$ for each cluster $k$
+increases the accuracy of the method \cite{Fu2014}.
 
+\fullcite{Fu2014} defines the piecewise linear projection training objective, as follows:
+\begin{align}
+&T_k^* = \argmin_{T_k} \frac{1}{N_k} \sum_{(\vec{x}, \vec{y})\in C_k} \norm{T_k \vec{x} - \vec{y}}
+\end{align}
+where $N_k \in \mathbb{N}$ is the amount of word pairs in the $k^\mathit{th}$ cluster $C_k = \{ (\vec{x_i}, \vec{y_i}) | \vec{y_i} - \vec{x_i} \textit{ in cluster } k, i \in [1, N] \}$ \cite{Fu2014}.
 Both training objectives describe multivariate linear regression tasks.
 \fullcite{Fu2014} uses stochastic gradient descent (SGD) to solve the objective.
-In the thesis' implementation SciPy's SGD regressor \cite{Jones2001} is used to train the linear projection matrices.
-The thesis' evaluation will show whether linear projection is superior to the KRI-kNN in the given task,
+SciPy's SGD regressor \cite{Jones2001} is used to train the linear projection matrices.
+
+In \fullcite{Fu2014}'s work, the classification allows a given unknown class to have $0$, $1$ or multiple superclasses.
+In the thesis' case, an unknown class should always be assigned $1$ superclass.
+Therefore the identification of subclass-of relations implemented by \fullcite{Fu2014} cannot be applied
+in the thesis' use case. The reasons are further discussed in Section~\ref{section:ol nn}.
+Because linear projection is piecewise linear projection with $1$ cluster,
+the classification approach is only explained for piecewise linear projection.
+Because only $\vec{u}$ is given the corresponding cluster of $\vec{u}$ is not known.
+Therefore the classification needs to identify the appropriate cluster $k^* \in [1, K]$ for $\vec{u}$,
+where $K \in \mathbb{N}$ is the total number of clusters.
+The correct cluster is identified by finding the offset of projection and unknown $T^*_k$ and $\vec{u}$ for each cluster $k \in [1,K]$,
+which has the closest distance to its corresponding cluster center $c_k \in \mathbb{R}^d$:
+\begin{align}
+&k^* = \argmin_{k \in K} \delta_2(T_k^* \vec{u} - \vec{u}, \vec{c_k})
+\end{align}
+where $c_k \in \mathbb{R}^d$ is the center of cluster $k \in [1, K]$.
+Consequently, the chosen projection for $\vec{u}$ is $\vec{p} = T^*_{k^*}$.
+The closest superclass to this projection $\vec{p}$ is then chosen as superclass of $\vec{u}$
+using euclidean distance.
+
+The thesis' evaluation will show whether linear projection is superior to the distance-based kNN in the given task,
 and to what degree it benefits from word embeddings using graph walk sentences instead of triple sentences.
