--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -196,7 +196,7 @@ assumption is true, for $T=(C,S)$:
 Only one class in this taxonomy has no superclasses. This class is called \textbf{root class}. However
 in the case of Wikidata, this assumption does not hold true. The following state is the case:
 \begin{align}
-\abs{\{  c \in C \mid \neg \exists s \in C: c \subclassof{T} s \}} > 
+\abs{\{  c \in C \mid \neg \exists s \in C: c \subclassof{T} s \}} \ge 1
 \end{align}
 There are classes other than the root class, which also have no superclasses. These classes will be called orphan classes.
 \begin{definition}[Root class]\label{root class}
